# ytmm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-and-upload.yml  build.yml
docs/: design-requirements.md
scripts/: build.py  clean.py
tests/: test.py
ytmm/: __init__.py  __main__.py  cli.py  output.py  utils.py  ytmm.py
