[metadata]
name = ytmm
version = 0.1.0
description = YouTube Music Manager
author = lazergenixdev
author_email = lazergenixdev@gmail.com
license = MIT

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    ytmm = ytmm.cli:main

